--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pedidos App</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pedidos App</title>
 </head>
+
 <body>
-  
+
   <h3>Seleccionar Proveedor</h3>
-  <select id="proveedorSelect"></select>
+
+  <button id="eliminarProveedor">Eliminar Proveedor</button>
 
   <h3>Crear Proveedor</h3>
-  
+
   <input type="text" id="nombreProveedor" placeholder="Nombre del proveedor">
   <button onclick="crearProveedor()">Crear</button>
-  
-  <h1>Crear Pedido</h1>
-  
+
+  <h1>Pedido</h1>
+
   <form id="pedidoForm">
-    <label>Proveedor: <input type="text" id="proveedor" required></label><br><br>
+    <label>Proveedor: <select id="proveedorSelect"></select></label><br><br>
     <label>Producto: <input type="text" id="producto" required></label><br><br>
     <label>Cantidad: <input type="number" id="cantidad" required></label><br><br>
     <button type="submit">Agregar</button>
@@ -26,20 +29,21 @@
 
   <p id="mensaje"></p>
 
-  <h2>Pedidos cargados</h2>
-    <table border="1" id="tablaPedidos">
+  <h2>Productos agregados</h2>
+  <table border="1" id="tablaPedidos">
     <thead>
-        <tr>
+      <tr>
         <th>Proveedor</th>
         <th>Producto</th>
         <th>Cantidad</th>
-        </tr>
+      </tr>
     </thead>
     <tbody>
 
     </tbody>
-    </table>
+  </table>
 
   <script src="main.js"></script>
 </body>
+
 </html>
