--- a/public/index.html
+++ b/public/index.html
@@ -5,45 +5,87 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pedidos App</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="bg-light">
 
-  <h3>Seleccionar Proveedor</h3>
+  <div class="container py-4">
+    <h1 class="mb-4 text-center">Gestión de pedidos</h1>
 
-  <button id="eliminarProveedor">Eliminar Proveedor</button>
+    <!--seleccionar y eliminar proveedor-->
+    <div class="card mb-4 shadow-sm">
+      <div class="card-body">
+        <h5 class="card-title">Seleccionar Proveedor</h5>
+        <div class="d-flex gap-2">
+          <select id="proveedorSelect" class="form-select"></select>
+          <button id="eliminarProveedor" class="btn btn-danger">
+            <i class="bi bi-trash"></i>Eliminar Proveedor
+          </button>
+        </div>
+      </div>
+    </div>
 
-  <h3>Crear Proveedor</h3>
+    <!--crear proveedor-->
+    <div class="card mb-4 shadow-sm">
+      <div class="card-body">
+        <h5>Crear Proveedor</h5>
+        <div class="input-group">
+          <input type="text" id="nombreProveedor" class="form-control" placeholder="Nombre del proveedor">
+          <button onclick="crearProveedor()" class="btn btn-primary">
+            <i class="bi bi-plus-circle"></i>crear
+          </button>
+        </div>
+      </div>
+    </div>
 
-  <input type="text" id="nombreProveedor" placeholder="Nombre del proveedor">
-  <button onclick="crearProveedor()">Crear</button>
+    <!--crear pedido-->
+    <div class="card mb-4 shadow-sm">
+      <div class="card-body">
+        <h5>Pedido</h5>
+        <form id="pedidoForm" class="row g-3">
+          <div class="col-md-6">
+            <label for="producto" class="form-label">Producto</label>
+            <input type="text" id="producto" class="form-control" required>
+          </div>
+          <div class="col-md-6">
+            <label for="cantidad" class="form-label">Cantidad</label>
+            <input type="number" id="cantidad" class="form-control" required>
+          </div>
+          <div class="col-12 text-end">
+            <button type="submit" class="btn btn-success">
+              Agregar
+            </button>
+          </div>
+        </form>
+        <p id="mensaje" class="mt-2 text-success"></p>
+      </div>
+    </div>
 
-  <h1>Pedido</h1>
+    <!--tabla de pedidos-->
+    <div class="card shadow-sm">
+      <div class="card-body">
+        <h5 class="card-title">Productos agregados</h5>
+        <div class="table-responsive">
+          <table class="table table-striped table-hover" id="tablaPedidos">
+            <thead class="table-dark">
+              <tr>
+                <th>Proveedor</th>
+                <th>Producto</th>
+                <th>Cantidad</th>
+                <th>Acciones</th>
+              </tr>
+            </thead>
+            <tbody>
 
-  <form id="pedidoForm">
-    <label>Proveedor: <select id="proveedorSelect"></select></label><br><br>
-    <label>Producto: <input type="text" id="producto" required></label><br><br>
-    <label>Cantidad: <input type="number" id="cantidad" required></label><br><br>
-    <button type="submit">Agregar</button>
-  </form>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
 
-  <p id="mensaje"></p>
-
-  <h2>Productos agregados</h2>
-  <table border="1" id="tablaPedidos">
-    <thead>
-      <tr>
-        <th>Proveedor</th>
-        <th>Producto</th>
-        <th>Cantidad</th>
-      </tr>
-    </thead>
-    <tbody>
-
-    </tbody>
-  </table>
-
-  <script src="main.js"></script>
+    <script src="main.js"></script>
+  </div>
 </body>
 
 </html>
