--- a/public/index.html
+++ b/public/index.html
@@ -57,8 +57,8 @@
                 <input type="text" id="producto" class="form-control" required>
               </div>
               <div class="col-md-6">
-                <label for="cantidad" class="form-label">Cantidad</label>
-                <input type="number" id="cantidad" class="form-control" required>
+                <label for="codigo" class="form-label">Código</label>
+                <input type="text" id="codigo" class="form-control" required>
               </div>
               <div class="col-12 text-start mt-2">
                 <button type="submit" class="btn btn-success">
@@ -79,10 +79,9 @@
               <table class="table table-striped table-hover" id="tablaPedidos">
                 <thead class="table-dark">
                   <tr>
-                    <th>Proveedor</th>
                     <th>Producto</th>
-                    <th>Cantidad</th>
-                    <th>Acciones</th>
+                    <th>Código</th>
+                    <th>Accion</th>
                   </tr>
                 </thead>
                 <tbody>
