--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
   <div class="container py-4">
 
-    <h1 class="mb-4 text-center">Gestión de pedidos</h1>
+    <h2 class="mb-4 text-center">Gestión de pedidos</h2>
 
     <!--nav de pestañas-->
     <ul class="nav nav-tabs" id="appTabs" role="tablist">
@@ -22,6 +22,11 @@
         <button class="nav-link active" id="pedidos-tab" data-bs-toggle="tab" data-bs-target="#pedidos" type="button"
           role="tab">
           Pedidos
+        </button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="avisos-tab" data-bs-toggle="tab" data-bs-target="#avisos" type="button" role="tab">
+          Avisos
         </button>
       </li>
       <li class="nav-item" role="presentation">
@@ -34,6 +39,71 @@
 
     <!-- CONTENIDO DE LAS PESTAÑAS -->
     <div class="tab-content mt-3" id="appTabsContent">
+
+      <!--TAB AVISOS-->
+      <div class="tab-pane fade" id="avisos" role="tabpanel">
+        <!--crear aviso-->
+        <div class="card mb-4 shadow-sm">
+          <div class="card-body">
+            <h5>Crear Aviso</h5>
+            <form id="avisosForm" class="col g-3 mt-3">
+              <div class="row">
+                <div class="col-md-6">
+                  <label for="productoAviso" class="form-label mb-0">Producto</label>
+                  <input type="text" id="productoAviso" class="form-control" required>
+                </div>
+                <div class="col-md-6">
+                  <label for="codigoAviso" class="form-label mb-0">Código</label>
+                  <input type="text" id="codigoAviso" class="form-control" required>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-6 mt-3">
+                  <label for="nombreCliente" class="form-label mb-0">Nombre cliente</label>
+                  <input type="text" id="nombreCliente" class="form-control" required>
+                </div>
+                <div class="col-md-6 mt-3">
+                  <label for="telefono" class="form-label mb-0">Teléfono</label>
+                  <input type="text" id="telefono" class="form-control" required>
+                </div>
+              </div>
+              <div class="row mt-3 align-items-center">
+                <div class="col-auto">
+                  <button type="submit" class="btn btn-success">
+                    Agregar
+                  </button>
+                </div>
+                <div class="col">
+                  <p id="mensajeAviso" class="mb-0 text-success"></p>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+        <!--tabla de avisos-->
+        <div class="card shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title">Lista de avisos</h5>
+            <div class="table-responsive">
+              <table class="table table-striped table-hover" id="tablaAvisos">
+                <thead class="table-dark">
+                  <tr>
+                    <th>Producto</th>
+                    <th>Código</th>
+                    <th>Nombre Cliente</th>
+                    <th>Teléfono</th>
+                    <th>Estado</th>
+                    <th>Acción</th>
+                  </tr>
+                </thead>
+                <tbody>
+
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <!-- TAB PEDIDOS -->
       <div class="tab-pane fade show active" id="pedidos" role="tabpanel">
@@ -51,32 +121,36 @@
         <div class="card mb-4 shadow-sm">
           <div class="card-body">
             <h5>Pedido</h5>
-            <form id="pedidoForm" class="col g-3">
+            <form id="pedidoForm" class="col g-3 mt-3">
               <div class="col-md-6">
-                <label for="producto" class="form-label">Producto</label>
+                <label for="producto" class="form-label mb-0">Producto</label>
                 <input type="text" id="producto" class="form-control" required>
               </div>
               <div class="col-md-6">
-                <label for="codigo" class="form-label">Código</label>
+                <label for="codigo" class="form-label mb-0">Código</label>
                 <input type="text" id="codigo" class="form-control" required>
               </div>
-              <div class="col-12 text-start mt-2">
-                <button type="submit" class="btn btn-success">
-                  Agregar
-                </button>
+              <div class="row mt-3 align-items-center">
+                <div class="col-auto">
+                  <button type="submit" class="btn btn-success">
+                    Agregar
+                  </button>
+                </div>
+                <div class="col">
+                  <p id="mensaje" class="mb-0 text-success"></p>
+                </div>
               </div>
             </form>
-            <p id="mensaje" class="mt-2 text-success"></p>
           </div>
         </div>
 
 
         <!--tabla de pedidos-->
-        <div class="card shadow-sm">
+        <div class="card shadow-sm ">
           <div class="card-body">
             <h5 class="card-title">Productos agregados</h5>
             <div class="table-responsive">
-              <table class="table table-striped table-hover" id="tablaPedidos">
+              <table class="table table-striped table-hover table-bordered" id="tablaPedidos">
                 <thead class="table-dark">
                   <tr>
                     <th>Producto</th>
@@ -98,11 +172,11 @@
         <!-- Crear Proveedor -->
         <div class="card mb-4 shadow-sm">
           <div class="card-body">
-            <h5 class="card-title">Proveedor</h5>
-            <div class="input-group">
+            <h5 class="card-title">Agregar Proveedor</h5>
+            <div class="d-flex gap-2 mt-3">
               <input type="text" id="nombreProveedor" class="form-control" placeholder="Nombre del proveedor">
-              <button onclick="crearProveedor()" class="btn btn-primary">
-                <i class="bi bi-plus-circle"></i> Crear
+              <button onclick="crearProveedor()" class="btn btn-primary d-flex gap-2">
+                <i class="bi bi-plus-circle"></i>Agregar
               </button>
             </div>
           </div>
@@ -112,10 +186,10 @@
         <div class="card mb-4 shadow-sm">
           <div class="card-body">
             <h5 class="card-title">Eliminar Proveedor</h5>
-            <div class="d-flex gap-2">
+            <div class="d-flex gap-2 mt-3">
               <select id="eliminarProveedorSelect" class="form-select"></select>
-              <button id="eliminarProveedor" class="btn btn-danger">
-                <i class="bi bi-trash"></i>Eliminar
+              <button id="eliminarProveedor" class="btn btn-danger d-flex gap-2">
+                <i class="bi bi-trash"></i>eliminar
               </button>
             </div>
           </div>
