--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pedidos App</title>
+  <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
@@ -93,7 +94,7 @@
                     <th>Nombre Cliente</th>
                     <th>Teléfono</th>
                     <th>Estado</th>
-                    <th>Acción</th>
+                    <th></th>
                   </tr>
                 </thead>
                 <tbody>
@@ -149,13 +150,13 @@
         <div class="card shadow-sm ">
           <div class="card-body">
             <h5 class="card-title">Productos agregados</h5>
-            <div class="table-responsive">
+            <div class="table-responsive-sm">
               <table class="table table-striped table-hover table-bordered" id="tablaPedidos">
                 <thead class="table-dark">
                   <tr>
                     <th>Producto</th>
                     <th>Código</th>
-                    <th>Accion</th>
+                    <th>Acción</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -174,7 +175,7 @@
           <div class="card-body">
             <h5 class="card-title">Agregar Proveedor</h5>
             <div class="d-flex gap-2 mt-3">
-              <input type="text" id="nombreProveedor" class="form-control" placeholder="Nombre del proveedor">
+              <input type="text" id="nombreProveedor" class="form-control" placeholder="Nombre del proveedor" required>
               <button onclick="crearProveedor()" class="btn btn-primary d-flex gap-2">
                 <i class="bi bi-plus-circle"></i>Agregar
               </button>
@@ -195,6 +196,27 @@
           </div>
         </div>
 
+      </div>
+    </div>
+  </div>
+  <div id="alertContainer" class="alert-overlay d-none">
+    <div class="alert-box text-center rounded shadow-lg bg-white"></div>
+  </div>
+  <!-- Modal de confirmación -->
+  <div class="modal fade" id="confirmModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content shadow">
+        <div class="modal-header bg-danger text-white">
+          <h5 class="modal-title">Confirmar acción</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+        </div>
+        <div class="modal-body" id="confirmModalMessage">
+          ¿Está seguro de realizar esta acción?
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+          <button type="button" id="confirmModalBtn" class="btn btn-danger">Confirmar</button>
+        </div>
       </div>
     </div>
   </div>
